TISOMSII-137 Alignment issue fixed

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
@@ -36939,6 +36939,9 @@ display:block;
 	height: 94%
 } 
 
+.headline.findaStoreHeadLin {
+    padding-left: 10px;
+}
 .input-group-btn>.store-btn {
 	font-size: 12px;
     text-align: center;
